fixed the testimonial alignment for phone view

--- a/public/stylesheets/careers.css
+++ b/public/stylesheets/careers.css
@@ -190,7 +190,8 @@ width: 100%;
 blockquote p.clients-words {
     font-size: 14px;
      position: absolute;
-     top: 20%;
+          top: 20%;
+   font-style: italic;
 }
 span.clients-name {
   font-size: 14px;
